<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity"
    android:id="@+id/menubu">

    <Button
        android:id="@+id/add"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_width="212dp"
        android:layout_height="67dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="71dp"
        android:onClick="agregarscreen"
        android:text="@string/btnagregar"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/list"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_width="212dp"
        android:layout_height="67dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="71dp"
        android:onClick="Listarscreen"
        android:text="@string/btnlista"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <Button
        android:id="@+id/upd"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="212dp"
        android:layout_height="67dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="71dp"
        android:onClick="Updatescreen"
        android:text="@string/btnupdate"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/del" />

    <Button
        android:id="@+id/del"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="212dp"
        android:layout_height="67dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="71dp"
        android:onClick="Deletescreen"
        android:text="@string/btneliminar"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="wrap_content"
        android:layout_height="669dp"
        android:layout_gravity="bottom"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingStart="60dp"
        android:paddingLeft="60dp"
        android:paddingEnd="60dp"
        android:paddingRight="60dp"
        android:paddingBottom="30dp">

    </androidx.viewpager.widget.ViewPager>
</LinearLayout>